fixing class name overlap

--- a/assignement-1/src/components/footer/footer.css
+++ b/assignement-1/src/components/footer/footer.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     margin-bottom: 40px;
     width: 100%;
-    height: 5vw;
+    height: 4vw;
     
 }
 
@@ -11,13 +11,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 5vw;
-    width: 20%;
+    height: 4vw;
+    width: 15%;
     
 }
 .footer-right-img{
-    width: 75px;
-    height: 75px;
+    width: 55px;
+    height: 5   5px;
 }
 
 
@@ -42,7 +42,6 @@
         font-size: 10px;
         width: 100px;
         height: 20px;
-        margin-bottom: 10px;
     }
 
 }
