--- a/assignement-1/src/pages/home/styles.css
+++ b/assignement-1/src/pages/home/styles.css
@@ -1,16 +1,20 @@
-.container{
+.container-home{
     display: flex;
     flex-direction: row;
-    width: 100vw;
-    
+    align-items: start;
+    width: 100%;
+    height: 1500px;
+
 }
 
-.container-left{
+.container-left-home{
     display: flex;
     justify-content: center;
     width: 50vw;
-    /* height: 80vw; */
-    
+    height: 80vw;
+    width: 50%;
+    height: 500px;
+
 }
 
 .container-left-text{
@@ -18,7 +22,7 @@
     width: 20vw;
     margin-top: 150px;
     color: white;
-    
+
 }
 
 .container-left-text-name{
@@ -30,14 +34,15 @@
 }
 
 
-.container-right{
+.container-right-home{
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
-    /* align-items: start; */
+    align-items: start;
     width: 50vw;
-    /* height: 80vw; */
-    
+    height: 80vw;
+    width: 50%;
+    height: 500px;
+
 }
 .container-right-img{
     margin-top: 10%;
@@ -53,20 +58,20 @@
 }
 
 @media (max-width: 600px) {
-    .container{
+    .container-home{
         flex-direction: column;
         height: 900px;
     }
-    .container-left{
+    .container-left-home{
     
-        height: 450px;
+        height: 540px;
         width: 100%;
     }
     .container-left-text{
         margin-top: 40px;
         width: 100%;
     }
-    .container-right{
+    .container-right-home{
         width: 100%;
         height: 300px;
     }
